--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "symfony/yaml": "^5.0",
         "illuminate/database": "^7.10",
         "klein/klein": "^2.1",
-        "illuminate/events": "^7.10"
+        "illuminate/events": "^7.10",
+        "bacon/bacon-qr-code": "^2.0"
     },
     "autoload": {
         "psr-4": {
