--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "illuminate/database": "^7.10",
         "klein/klein": "^2.1",
         "illuminate/events": "^7.10",
-        "bacon/bacon-qr-code": "^2.0"
+        "bacon/bacon-qr-code": "^2.0",
+        "firebase/php-jwt": "^5.2",
+        "vlucas/valitron": "^1.4"
     },
     "autoload": {
         "psr-4": {
